--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -51,4 +55,10 @@ dependencies {
 
     // material design
     implementation 'com.google.android.material:material:1.3.0-beta01'
+
+    // KProgress
+    implementation 'com.kaopiz:kprogresshud:1.2.0'
+
+    // for shared preferance
+    implementation 'com.github.pwittchen:prefser-rx2:2.2.3'
 }
