--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatsAppClone">
-        <activity android:name=".ui.account.LoginActivity"></activity>
-        <activity android:name=".ui.MailActivity" />
-        <activity android:name=".ui.account.RegisterActivity" />
-        <activity android:name=".ui.StartActivity">
+
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.account.LoginActivity" />
+        <activity android:name=".ui.MailActivity" />
+        <activity android:name=".ui.account.RegisterActivity" />
+        <activity android:name=".ui.StartActivity"/>
+
     </application>
 
 </manifest>
