--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,11 @@ dependencies {
 
     // for shared preferance
     implementation 'com.github.pwittchen:prefser-rx2:2.2.3'
+
+    // circular imageview
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
