--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
 
         <activity android:name=".ui.account.LoginActivity" />
-        <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.home.MainActivity" />
         <activity android:name=".ui.account.RegisterActivity" />
         <activity android:name=".ui.StartActivity"/>
 
